Fixed bug in generateCalendar data not showing the correct date format

--- a/src/App.css
+++ b/src/App.css
@@ -31,7 +31,8 @@ h2 {
   font-size: 1.5rem;
 }
 
-button, select {
+button,
+select {
   display: flex;
   align-items: center;
   justify-content: center;
